--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -4,12 +4,6 @@
       a name="hero"
         h3 data-magellan-destination="hero" Hero Area
 
-        /ul.clearfix data-magellan-expedition="fixed"
-          /li= link_to "Contact", contact_path
-          /li= link_to "Our Work", root_path
-          /li= link_to "Services", root_path
-          /li= link_to "Home", root_path
-
 #home
   div.fixed-nav-bar data-magellan-expedition="fixed" 
     ul.sub-nav.right
@@ -20,40 +14,38 @@
       li data-magellan-arrival="our-work" 
         a href="#our-work"  Our Work
       li data-magellan-arrival="contact" 
-        =link_to "Contact", contact_path
+        a href="#contact"  Contact
 
   .row
     .large-12.columns
       h3 5tringy Design Company
 
-
 #services
-  .row
+  .row.section-row data-magellan-destination="services" 
     .large-12.columns
       a name="services"
-      h3.section-heading data-magellan-destination="services"  Services
-
-
+      h3 Services
+      
 #our-work
-  .row
+  .row.section-row data-magellan-destination="our-work"
     .large-12.columns
       a name="our-work"
-      h3.section-heading data-magellan-destination="our-work"  Our Work
-
+      h3  Our Work
+      
 #contact
-  .row
+  .row.section-row data-magellan-destination="contact"
     .large-12.columns
-      h1 Contact Me
+      a name="contact"
+      h3 Contact Me
       p Fill in the form below to send me an email.
   .row
     .large-4.medium-6.columns
-      /= simple_form_for @contact_email do |f|
-        /= f.input :first_name
-        /= f.input :last_name
-        /= f.input :email
-        /= f.input :subject
-        /= f.input :message
-        /= f.submit class:"button expand"
+      = simple_form_for @contact_email, url: contact_path do |f|
+        = f.input :name
+        = f.input :email
+        = f.input :subject
+        = f.input :message
+        = f.submit class:"button expand"
 
 
 footer
