--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -10,74 +10,151 @@
 
 }
 
+// * * * * * * * * * * * * * * * * * * * * * * * * BASE STYLES
+
 html, body {
   margin: 0px;
   padding: 0px;
 }
 
-.section-heading {
-  margin-top: 140px;
-}
-
 .section-row {
-  padding-top: 90px;
+  padding-top: 140px;
 }
 
-#hero-area {
-  background: $primary-color;
-  height: 500px;
+//stops magellan travel earlier
+a.magellan-link {
+  position: relative;
+  top: 60px;
 }
 
-
-.fixed-nav-bar {
-  background: none;
-}
-
-#home {
+#fixed-nav {
+  background: #fff;
+  height: 55px;
   ul{
-  list-style: none;
+    list-style: none;
     li{
       &:last-child {
         margin-right: 20px;
       }
       &.active a {
         background: $light-color;
+        color: $dark-color !important;
       }
       a{
         float: right;
         color: $dark-color;
         text-align: center;
-        margin: 10px 0;
+        margin: 0;
         padding: 5px 10px;
         width: 100px;
         border-radius: 30px;
         &:hover {
-        background: $light-color;
+          color: $dark-color !important;
+          background: $light-color !important;
         }
       }
     }
   }
 }
 
+// * * * * * * * * * * * * * * * * * * * * * * * * HERO
+
+#hero-area {
+  background: $primary-color;
+  height: 500px;
+}
+
+// * * * * * * * * * * * * * * * * * * * * * * * * HOME
+
+
 #home {
   height: 1000px;
   background: #fff;
 }
+
+// * * * * * * * * * * * * * * * * * * * * * * * * SERVICES
+
 
 #services {
   height: 1000px;
   background: $secondary-color;
 }
 
-#our-work {
+// * * * * * * * * * * * * * * * * * * * * * * * * PROJECTS
+
+#projects {
   height: 1000px;
-  background: #fff;
+  background: $dark-color;
 }
 
-#contact {
+// * * * * * * * * * * * * * * * * * * * * * * * * ABOUT
+
+#about {
   height: 1000px;
   background: $primary-color;
 }
+
+// * * * * * * * * * * * * * * * * * * * * * * * * CONTACT
+
+#contact {
+  height: 1000px;
+  background: $light-color;
+}
+#contact-form-row {
+  .contact-label {
+    margin-bottom: 0;
+    padding-bottom: 0;
+  }
+  .inline-input input {
+    background: none;
+    border: 0;
+    box-shadow: none;
+    border-bottom: 1px solid $dark-color;
+  }
+}
+
+.subject-label {
+  padding-right: 0;
+}
+
+textarea {
+  height: auto;
+  height: 100px;
+  background: -webkit-linear-gradient(left, rgba(255,255,255,0) 15px, transparent 15px), -webkit-linear-gradient(right, rgba(255,255,255,0) 15px, transparent 15px), -webkit-linear-gradient(rgba(255,255,255,0) 30px, $dark-color 30px, $dark-color 31px, rgba(255,255,255,0) 31px);
+  background: -moz-linear-gradient(left, rgba(255,255,255,0) 15px, transparent 15px), -moz-linear-gradient(right, rgba(255,255,255,0) 15px, transparent 15px), -moz-linear-gradient(rgba(255,255,255,0) 30px, $dark-color 30px, $dark-color 31px, rgba(255,255,255,0) 31px);
+  background: -ms-linear-gradient(left, rgba(255,255,255,0) 15px, transparent 15px), -ms-linear-gradient(right, rgba(255,255,255,0) 15px, transparent 15px), -ms-linear-gradient(rgba(255,255,255,0) 30px, $dark-color 30px, $dark-color 31px, rgba(255,255,255,0) 31px);
+  background: -o-linear-gradient(left, rgba(255,255,255,0) 15px, transparent 15px), -o-linear-gradient(right, rgba(255,255,255,0) 15px, transparent 15px), -o-linear-gradient(rgba(255,255,255,0) 30px, $dark-color 30px, $dark-color 31px, rgba(255,255,255,0) 31px);
+  background: linear-gradient(left, rgba(255,255,255,0) 15px, transparent 15px), linear-gradient(right, rgba(255,255,255,0) 15px, transparent 15px), linear-gradient(rgba(255,255,255,0) 30px, $dark-color 30px, $dark-color 31px, rgba(255,255,255,0) 31px);
+  background-size: 100% 100%, 100% 100%, 100% 31px;
+  border: 0;
+  padding: 9px;
+  box-shadow: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  -o-box-shadow: none;
+  -ms-box-shadow: none;
+  line-height: 31px;
+  font-family: Arial, Helvetica, Sans-serif;
+  &:focus{
+    background: -webkit-linear-gradient(left, rgba(255,255,255,0) 15px, transparent 15px), -webkit-linear-gradient(right, rgba(255,255,255,0) 15px, transparent 15px), -webkit-linear-gradient(rgba(255,255,255,0) 30px, $dark-color 30px, $dark-color 31px, rgba(255,255,255,0) 31px);
+    background: -moz-linear-gradient(left, rgba(255,255,255,0) 15px, transparent 15px), -moz-linear-gradient(right, rgba(255,255,255,0) 15px, transparent 15px), -moz-linear-gradient(rgba(255,255,255,0) 30px, $dark-color 30px, $dark-color 31px, rgba(255,255,255,0) 31px);
+    background: -ms-linear-gradient(left, rgba(255,255,255,0) 15px, transparent 15px), -ms-linear-gradient(right, rgba(255,255,255,0) 15px, transparent 15px), -ms-linear-gradient(rgba(255,255,255,0) 30px, $dark-color 30px, $dark-color 31px, rgba(255,255,255,0) 31px);
+    background: -o-linear-gradient(left, rgba(255,255,255,0) 15px, transparent 15px), -o-linear-gradient(right, rgba(255,255,255,0) 15px, transparent 15px), -o-linear-gradient(rgba(255,255,255,0) 30px, $dark-color 30px, $dark-color 31px, rgba(255,255,255,0) 31px);
+    background: linear-gradient(left, rgba(255,255,255,0) 15px, transparent 15px), linear-gradient(right, rgba(255,255,255,0) 15px, transparent 15px), linear-gradient(rgba(255,255,255,0) 30px, $dark-color 30px, $dark-color 31px, rgba(255,255,255,0) 31px);
+    background-size: 100% 100%, 100% 100%, 100% 31px;
+    border: 0;
+    box-shadow: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    -o-box-shadow: none;
+    -ms-box-shadow: none;
+  }
+}
+
+
+
+
+// * * * * * * * * * * * * * * * * * * * * * * * * FOOTER
 
 footer {
   height: 60px;
