--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -2,50 +2,85 @@
   .row
     .large-12.columns
       a name="hero"
-        h3 data-magellan-destination="hero" Hero Area
+      h3 data-magellan-destination="hero" Hero Area
 
 #home
-  div.fixed-nav-bar data-magellan-expedition="fixed" 
+  div#fixed-nav.fixed-nav-bar data-magellan-expedition="fixed" 
     ul.sub-nav.right
-      li data-magellan-arrival="hero" 
+      li.hero-item data-magellan-arrival="hero" 
         a href="#hero-area"  Home
-      li data-magellan-arrival="services" 
+      li.services-item data-magellan-arrival="services" 
         a href="#services"  Services
-      li data-magellan-arrival="our-work" 
-        a href="#our-work"  Our Work
-      li data-magellan-arrival="contact" 
+      li.project-item data-magellan-arrival="projects" 
+        a href="#projects"  Projects
+      li.about-item data-magellan-arrival="about" 
+        a href="#about"  About
+      li.contact-item data-magellan-arrival="contact" 
         a href="#contact"  Contact
 
   .row
     .large-12.columns
-      h3 5tringy Design Company
+      h3 5tringy Creative
 
 #services
-  .row.section-row data-magellan-destination="services" 
+  span data-magellan-destination="services" 
+  a.magellan-link name="services"
+  .row.section-row
     .large-12.columns
-      a name="services"
       h3 Services
       
-#our-work
-  .row.section-row data-magellan-destination="our-work"
+#projects
+  span data-magellan-destination="projects"
+  a.magellan-link name="projects"
+  .row.section-row
     .large-12.columns
-      a name="our-work"
-      h3  Our Work
+      h3  Projects
       
-#contact
-  .row.section-row data-magellan-destination="contact"
+#about
+  span data-magellan-destination="about"
+  a.magellan-link name="about"
+  .row.section-row
     .large-12.columns
-      a name="contact"
-      h3 Contact Me
-      p Fill in the form below to send me an email.
-  .row
-    .large-4.medium-6.columns
+      h3  Cody Stringham
+
+#contact
+  span data-magellan-destination="contact"
+  a.magellan-link name="contact"
+  .row.section-row
+    .large-12.columns
+      h3 Want to talk?
+      p send me a message here:
+  .row#contact-form-row
       = simple_form_for @contact_email, url: contact_path do |f|
-        = f.input :name
-        = f.input :email
-        = f.input :subject
-        = f.input :message
-        = f.submit class:"button expand"
+
+        .large-4.columns
+          .row
+            .large-3.columns  
+              = f.label :name, class:"left inline contact-label"
+            .large-9.columns.inline-input
+              = f.input :name, label:false
+
+        .large-4.columns
+          .row
+            .large-3.columns  
+              = f.label :email, class:"left inline contact-label"
+            .large-9.columns.inline-input
+              = f.input :email, label:false
+
+        .large-4.columns
+          .row
+            .large-3.columns.subject-label
+              = f.label :subject, class:"left inline contact-label"
+            .large-9.columns.inline-input
+              = f.input :subject, label:false
+
+        .large-12.columns  
+          = f.label :message, class:"left inline contact-label"
+        .large-12.columns
+          = f.input :message, label:false
+        .row
+          .large-2.large-offset-5.columns         
+            = f.submit "Send Email", class:"button round expand secondary"
 
 
 footer
