--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -21,6 +21,10 @@ html, body {
   padding-top: 140px;
 }
 
+.content-container {
+  padding-bottom: 140px;
+}
+
 //stops magellan travel earlier
 a.magellan-link {
   position: relative;
@@ -97,7 +101,6 @@ a.magellan-link {
 // * * * * * * * * * * * * * * * * * * * * * * * * CONTACT
 
 #contact {
-  height: 1000px;
   background: $light-color;
 }
 #contact-form-row {
