--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -4,7 +4,7 @@
       a name="hero"
       h3 data-magellan-destination="hero" Hero Area
 
-#home
+#home.content-container
   div#fixed-nav.fixed-nav-bar data-magellan-expedition="fixed" 
     ul.sub-nav.right
       li.hero-item data-magellan-arrival="hero" 
@@ -22,64 +22,65 @@
     .large-12.columns
       h3 5tringy Creative
 
-#services
+#services.content-container
   span data-magellan-destination="services" 
   a.magellan-link name="services"
   .row.section-row
     .large-12.columns
       h3 Services
       
-#projects
+#projects.content-container
   span data-magellan-destination="projects"
   a.magellan-link name="projects"
   .row.section-row
     .large-12.columns
       h3  Projects
       
-#about
+#about.content-container
   span data-magellan-destination="about"
   a.magellan-link name="about"
   .row.section-row
     .large-12.columns
       h3  Cody Stringham
 
-#contact
+#contact.content-container
   span data-magellan-destination="contact"
   a.magellan-link name="contact"
   .row.section-row
     .large-12.columns
       h3 Want to talk?
       p send me a message here:
+
   .row#contact-form-row
       = simple_form_for @contact_email, url: contact_path do |f|
-
         .large-4.columns
           .row
             .large-3.columns  
               = f.label :name, class:"left inline contact-label"
-            .large-9.columns.inline-input
+            .large-9.medium-6.left.columns.inline-input
               = f.input :name, label:false
 
         .large-4.columns
           .row
             .large-3.columns  
               = f.label :email, class:"left inline contact-label"
-            .large-9.columns.inline-input
+            .large-9.medium-6.left.columns.inline-input
               = f.input :email, label:false
 
         .large-4.columns
           .row
             .large-3.columns.subject-label
               = f.label :subject, class:"left inline contact-label"
-            .large-9.columns.inline-input
+            .large-9.medium-6.left.columns.inline-input
               = f.input :subject, label:false
 
         .large-12.columns  
           = f.label :message, class:"left inline contact-label"
         .large-12.columns
           = f.input :message, label:false
+
         .row
-          .large-2.large-offset-5.columns         
+          .large-2.large-offset-5.medium-4.medium-offset-4.small-6.small-offset-3.columns         
             = f.submit "Send Email", class:"button round expand secondary"
 
 
