--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -37,7 +37,7 @@
 
 // We use these to control various global styles
 // $body-bg: #fff;
-// $body-font-color: #222;
+$body-font-color: $dark-color;
 $body-font-family: "nimbus-sans", "Helvetica", Helvetica, Arial, sans-serif;
 // $body-font-weight: normal;
 // $body-font-style: normal;
@@ -116,7 +116,7 @@ $body-font-family: "nimbus-sans", "Helvetica", Helvetica, Arial, sans-serif;
 $header-font-family: "NexaSlab";
 // $header-font-weight: 300;
 // $header-font-style: normal;
-// $header-font-color: #222;
+$header-font-color: $dark-color;
 // $header-line-height: 1.4;
 // $header-top-margin: .2rem;
 // $header-bottom-margin: .5rem;
@@ -775,7 +775,7 @@ $header-font-family: "NexaSlab";
 // $panel-padding: rem-calc(20);
 
 // We use these to set default font colors
-// $panel-font-color: #333;
+ $panel-font-color: $dark-color;
 // $panel-font-color-alt: #fff;
 
 // $panel-header-adjust: true;
