Adds slider to the services section

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -75,43 +75,69 @@ nav.top-bar.mobile-nav data-topbar=""
   .row.section-row.light
     .large-12.columns
       h3.page-head.light Get back up to speed
-      h4.subhead.light It's time to get serious about your visual identity, in todays market quality establishes trust. We're here to help your customers build more confidence in your brand.
-    .medium-6.medium-offset-3.columns
-      h3.service-section.light Graphic Design
-    .large-12.columns
-      .service-sub.desc-left
-          span.light.fa.fa-circle-o.logodes
-          h4.subhead.light Logo Design
-      .service-sub.desc-right
-          span.light.fa.fa-puzzle-piece.brand
-          h4.subhead.light Branding
-      .service-sub.desc-left
-          span.light.fa.fa-bullhorn.adver
-          h4.subhead.light Advertisements
-      .service-sub.desc-right
-          span.light.fa.fa-asterisk.more
-          h4.subhead.light And much more&hellip;
+      h4.subhead.light It's time to get serious about your visual identity, in today's market quality establishes trust. We're here to help your customers build more confidence in your brand.
+  #serv-slide.serv-slide
+    ul
+      li
+        .slide-item
+          =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
+          h4 Print
+      li
+        .slide-item
+          =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
+          h4 Web
+      li
+        .slide-item
+          =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
+          h4 Ads
+    ul
+      li
+        .slide-item
+          =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
+          h4 Logos
+      li
+        .slide-item
+          =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
+          h4 Identity
+      li
+        .slide-item
+          =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
+          h4 Standards
+    ul
+      li
+        .slide-item
+          =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
+          h4 Static
+      li
+        .slide-item
+          =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
+          h4 Responsive
+      li
+        .slide-item
+          =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
+          h4 SEO
+    ul
+      li
+        .slide-item
+          =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
+          h4 Dynamic
+      li
+        .slide-item
+          =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
+          h4 Functional
+      li
+        .slide-item
+          =image_tag("logo_5_w.svg", alt: "5tringy Creative Logo")
+          h4 Manageable
+    .row
+      .large-12.columns     
+        nav
+          a href="#"  Graphics
+          a href="#"  Branding
+          a href="#"  Websites
+          a href="#"  Web Apps
 
-    .medium-6.medium-offset-3.columns
-      h3.service-section.light Web Development
-    .large-12.columns
-      .service-sub.desc-left
-          span.light.fa.fa-laptop.static
-          h4.subhead.light Static Sites
-      .service-sub.desc-right
-          span.light.fa.fa-mobile.respo
-          h4.subhead.light Responsive Sites
-      .service-sub.desc-left
-          span.light.fa.fa-magic.apps
-          h4.subhead.light Web Apps
-      .service-sub.desc-right
-          span.light.fa.fa-search.search
-          h4.subhead.light On-Page SEO
-    .large-12.columns
-      hr
-      p Blurb about how 5tringy Creative combines the best of design and development to deliver a truly exceptional product to all of our customers.
-
-      
+        
 #projects.content-container
   span data-magellan-destination="projects"
   a.magellan-link name="projects"
