--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -262,30 +262,6 @@ a.magellan-link {
     span {
       font-size: 6em;
       position: absolute;
-      &.logodes {
-        font-size: 5em;
-      }
-      &.brand {
-        font-size: 5em;
-      }
-      &.adver {
-        font-size: 5em;
-      }
-      &.more {
-        font-size: 5em;
-      }
-      &.static {
-        font-size: 5em;
-      }
-      &.respo {
-        font-size: 5em;
-      }
-      &.apps {
-        font-size: 5em;
-      }
-      &.search {
-        font-size: 5em;
-      }
     }
     &.desc-right {
       text-align: right;
@@ -309,6 +285,334 @@ a.magellan-link {
         top: 0px;
       }
     }
+  }
+}
+
+
+
+
+// * * * * SLIDER
+
+.serv-slide {
+  position: relative;
+  margin-top: 30px;
+  height: 490px;
+}
+
+.serv-slide ul {
+  list-style-type: none;
+  margin-left: 0;
+  position: absolute;
+  width: 100%;
+  left: 0;
+  bottom: 100px;
+  overflow: hidden;
+  text-align: center;
+  pointer-events: none;
+}
+
+.no-js .serv-slide ul {
+  position: relative;
+  left: auto;
+  bottom: auto;
+  margin: 0;
+  overflow: visible;
+}
+
+.serv-slide ul.serv-current {
+  pointer-events: auto;
+}
+
+.serv-slide ul li {
+  display: inline-block;
+  margin: 2%;
+  padding: 20px;
+  width: 25%;
+  max-width: 300px;
+  -webkit-transform: translateX(600%);
+  transform: translateX(600%);
+  -webkit-transition: opacity 0.2s linear;
+  transition: opacity 0.2s linear;
+}
+
+.no-js .serv-slide ul li {
+  -webkit-transform: translateX(0);
+  transform: translateX(0);
+}
+
+.serv-slide ul li img {
+  display: block;
+  margin: 0 auto;
+}
+
+.serv-slide ul li img {
+  max-width: 100%;
+  border: none;
+}
+
+.serv-slide ul li h4 {
+  display: inline-block;
+  font-family: Helvetica;
+  color: lighten($secondary-color, 20%);
+  font-style: italic;
+  font-weight: 400;
+  font-size: 18px;
+  padding: 20px 10px 0;
+}
+
+.serv-slide nav {
+  position: relative;
+  top: 360px;
+  text-align: center;
+  max-width: 90em;
+  margin: 0 auto;
+  border-top: 1px solid #fff;
+}
+
+.no-js nav {
+  display: none;
+}
+
+.serv-slide nav a {
+  display: inline-block;
+  font-family: "NexaSlab";
+  text-transform: uppercase;
+  padding: 30px 30px 30px 34px;
+  position: relative;
+  color: lighten($secondary-color, 30%);
+  outline: none;
+  -webkit-transition: color 0.2s linear;
+  transition: color 0.2s linear;
+}
+
+.serv-slide nav a:hover,
+.serv-slide nav a.serv-selected {
+  color: #fff;
+}
+
+.serv-slide nav a.serv-selected:after,
+.serv-slide nav a.serv-selected:before {
+  content: '';
+  position: absolute;
+  top: -1px;
+  border: solid transparent;
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none;
+}
+
+.serv-slide nav a.serv-selected:after {
+  border-color: transparent;
+  border-top-color: $secondary-color;
+  border-width: 14px;
+  left: 50%;
+  margin-left: -14px;
+}
+
+.serv-slide nav a.serv-selected:before {
+  border-color: transparent;
+  border-top-color: #fff;
+  border-width: 15px;
+  left: 50%;
+  margin-left: -15px;
+}
+
+/* Move classes and animations */
+
+.serv-slide ul:first-child li,
+.no-js .serv-slide ul li {
+  -webkit-animation: scaleUp 350ms ease-in-out both;
+  animation: scaleUp 350ms ease-in-out both;
+}
+
+@-webkit-keyframes scaleUp {
+  0% { -webkit-transform: translateX(0) scale(0); }
+  100% { -webkit-transform: translateX(0) scale(1); }
+}
+
+@keyframes scaleUp {
+  0% { transform: translateX(0) scale(0); }
+  100% { transform: translateX(0) scale(1); }
+}
+
+.serv-slide ul:first-child li:first-child {
+  -webkit-animation-delay: 90ms;
+  animation-delay: 90ms;
+}
+
+.serv-slide ul:first-child li:nth-child(2) {
+  -webkit-animation-delay: 180ms;
+  animation-delay: 180ms;
+}
+
+.serv-slide ul:first-child li:nth-child(3) {
+  -webkit-animation-delay: 270ms;
+  animation-delay: 270ms;
+}
+
+.serv-slide ul:first-child li:nth-child(4) {
+  -webkit-animation-delay: 360ms;
+  animation-delay: 360ms;
+}
+
+/* moveFromRight */
+
+.serv-slide ul.serv-moveFromRight li {
+  -webkit-animation: moveFromRight 350ms ease-in-out both;
+  animation: moveFromRight 350ms ease-in-out both;
+}
+
+/* moveFromLeft */
+
+.serv-slide ul.serv-moveFromLeft li {
+  -webkit-animation: moveFromLeft 350ms ease-in-out both;
+  animation: moveFromLeft 350ms ease-in-out both;
+}
+
+/* moveToRight */
+
+.serv-slide ul.serv-moveToRight li {
+  -webkit-animation: moveToRight 350ms ease-in-out both;
+  animation: moveToRight 350ms ease-in-out both;
+}
+
+/* moveToLeft */
+
+.serv-slide ul.serv-moveToLeft li {
+  -webkit-animation: moveToLeft 350ms ease-in-out both;
+  animation: moveToLeft 350ms ease-in-out both;
+}
+
+/* Animation Delays */
+
+.serv-slide ul.serv-moveToLeft li:first-child,
+.serv-slide ul.serv-moveFromRight li:first-child,
+.serv-slide ul.serv-moveToRight li:nth-child(4),
+.serv-slide ul.serv-moveFromLeft li:nth-child(4) {
+  -webkit-animation-delay: 0ms;
+  animation-delay: 0ms;
+}
+
+.serv-slide ul.serv-moveToLeft li:nth-child(2),
+.serv-slide ul.serv-moveFromRight li:nth-child(2),
+.serv-slide ul.serv-moveToRight li:nth-child(3),
+.serv-slide ul.serv-moveFromLeft li:nth-child(3) {
+  -webkit-animation-delay: 90ms;
+  animation-delay: 90ms;
+}
+
+.serv-slide ul.serv-moveToLeft li:nth-child(3),
+.serv-slide ul.serv-moveFromRight li:nth-child(3),
+.serv-slide ul.serv-moveToRight li:nth-child(2),
+.serv-slide ul.serv-moveFromLeft li:nth-child(2) {
+  -webkit-animation-delay: 180ms;
+  animation-delay: 180ms;
+}
+
+.serv-slide ul.serv-moveToLeft li:nth-child(4),
+.serv-slide ul.serv-moveFromRight li:nth-child(4),
+.serv-slide ul.serv-moveToRight li:first-child,
+.serv-slide ul.serv-moveFromLeft li:first-child  {
+  -webkit-animation-delay: 270ms;
+  animation-delay: 270ms;
+}
+
+/* Animations */
+
+@-webkit-keyframes moveFromRight {
+  0% { -webkit-transform: translateX(600%); }
+  100% { -webkit-transform: translateX(0%); }
+}
+
+@-webkit-keyframes moveFromLeft {
+  0% { -webkit-transform: translateX(-600%); }
+  100% { -webkit-transform: translateX(0%); }
+}
+
+@-webkit-keyframes moveToRight {
+  0% { -webkit-transform: translateX(0%); }
+  100% { -webkit-transform: translateX(600%); }
+}
+
+@-webkit-keyframes moveToLeft {
+  0% { -webkit-transform: translateX(0%); }
+  100% { -webkit-transform: translateX(-600%); }
+}
+
+@keyframes moveFromRight {
+  0% { transform: translateX(600%); }
+  100% { transform: translateX(0); }
+}
+
+@keyframes moveFromLeft {
+  0% { transform: translateX(-600%); }
+  100% { transform: translateX(0); }
+}
+
+@keyframes moveToRight {
+  0% { transform: translateX(0%); }
+  100% { transform: translateX(600%); }
+}
+
+@keyframes moveToLeft {
+  0% { transform: translateX(0%); }
+  100% { transform: translateX(-600%); }
+}
+
+.serv-slide {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Media Queries */
+@media screen and (max-width: 910px){
+
+  .serv-slide nav a {
+    font-size: 12px;
+    padding: 40px 10px 30px 14px;
+  }
+}
+
+@media screen and (max-width: 740px){
+  .serv-slide {
+    margin-top: 100px;
+    height: 300px;
+  }
+  .serv-slide nav {
+    top: 200px;
+  }
+}
+
+@media screen and (max-width: 490px){ 
+  .serv-slide {
+    text-align: center;
+    height: auto;
+  }
+
+  .serv-slide ul {
+    margin-left: 0;
+    position: relative;
+    display: inline;
+    bottom: auto;
+    pointer-events: auto;
+  }
+
+  .serv-slide ul li {
+    -webkit-animation: none !important;
+    animation: none !important;
+    -webkit-transform: translateX(0) !important;
+    transform: translateX(0) !important;
+    padding: 10px 3px;
+    width: 50%;
+  }
+
+  .serv-slide nav {
+    display: none;
   }
 }
 
@@ -373,8 +677,7 @@ a.magellan-link {
 }
 
 textarea {
-  height: auto;
-  height: 180px;
+  height: 180px !important;
   background: -webkit-linear-gradient(left, rgba(255,255,255,0) 15px, transparent 15px), -webkit-linear-gradient(right, rgba(255,255,255,0) 15px, transparent 15px), -webkit-linear-gradient(rgba(255,255,255,0) 30px, $dark-color 30px, $dark-color 31px, rgba(255,255,255,0) 31px);
   background: -moz-linear-gradient(left, rgba(255,255,255,0) 15px, transparent 15px), -moz-linear-gradient(right, rgba(255,255,255,0) 15px, transparent 15px), -moz-linear-gradient(rgba(255,255,255,0) 30px, $dark-color 30px, $dark-color 31px, rgba(255,255,255,0) 31px);
   background: -ms-linear-gradient(left, rgba(255,255,255,0) 15px, transparent 15px), -ms-linear-gradient(right, rgba(255,255,255,0) 15px, transparent 15px), -ms-linear-gradient(rgba(255,255,255,0) 30px, $dark-color 30px, $dark-color 31px, rgba(255,255,255,0) 31px);
